<resources>
    <string name="app_name">Material Form</string>
    <string name="hint_user_name">Enter User Name</string>
    <string name="hint_user_age">Enter User Age</string>
    <string name="user_name">User Name</string>
    <string name="user_age">User Age</string>
    <string name="user_gender">Gender</string>
    <string name="hint_job_title">Job Title</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_save">Save</string>
    <string name="label_edit">Edit</string>

</resources>